# PyAirbyte

./: .cursorrules  .deptry.toml  .gitattributes  .gitignore  .gitmodules  .mypy.ini  .ruff.toml  .viztracerrc  AGENTS.md  CONTRIBUTING.md  Dockerfile.mcp  README.md  docs.py  pyproject.toml  pyrefly.toml  requirements-dev.txt  requirements.txt  sync_progress_hubspot.jsonl  test_cross_version_sync.py  test_fastload_result_validation.py  test_load_metadata_schema.py  test_mcp_server.py  test_path  test_simple_load_result_scan.py  test_snowflake_load_result_scan.py  ty.toml  uv_migration_guide.md  vercel.json
.devin/: requirements.md
.github/: dependabot.yml  mcp-ci-tests.mcp.json  pr-welcome-community.md  pr-welcome-internal.md  release.drafter.yml
.github/codeql/: codeql-config.yml
.github/workflows/: actionlint.yml  auto-draft-prs.yml  auto_merge_notification.yml  autofix.yml  codeql-vulnerability-checks.yml  codeql.yml  enforce-draft-pr-status.yml  fix-pr-command.yml  gh-ci-fix-command.yml  label-community-prs.yml  on-demand-pr-test-command.yml  poe-command.yml  poetry-lock-command.yml  prerelease-command.yml  pydoc_preview.yml  pydoc_publish.yml  pypi_publish.yml  python_autofix.yml  python_format_checks.yml  python_lint.yml  python_pytest.yml  python_pytest.yml.updated  python_pytest_fast.yml  release_drafter.yml  semantic_pr_check.yml  semantic_pr_title_check.yml  slash_command_dispatch.yml  test-pr-command.yml  tk-todo-check.yml  tune-slow-markers-command.yml  uv-lock-command.yml  validate-pinned-actions.yml  welcome-message.yml
airbyte/: __init__.py  _airbyte_message_overrides.py  _batch_handles.py  _catalog_manager.py  _connector_base.py  _executor.py  _local_sync_progress.py  _message_generators.py  _message_iterators.py  _processors.py  _registry_utils.py  _state_backend.py  _state_manager.py  callbacks.py  cli.py  constants.py  documents.py  exceptions.py  lakes.py  logging.py  logs.py  progress.py  records.py  registry.py  results.py  secrets.py  source.py  strategies.py  telemetry.py  types.py  validate.py  version.py  warnings.py  writers.py
airbyte/_executors/: __init__.py  base.py  declarative.py  docker.py  emulated.py  java.py  local.py  noop.py  python.py  sonar.py  util.py
airbyte/_factories/: cache_factories.py  connector_factories.py
airbyte/_file_writers/: __init__.py  base.py  jsonl.py  parquet.py
airbyte/_future_cdk/: __init__.py  catalog_manager.py  catalog_managers.py  catalog_providers.py  record_processor.py  sql_processor.py  state_manager.py  state_providers.py  state_writers.py  static_catalog_manager.py  static_state_manager.py
airbyte/_processors/: __init__.py  base.py
airbyte/_util/: __init__.py  api_duck_types.py  api_imports.py  api_util.py  biz_logic.py  datetime_parse.py  destination_readback.py  destination_smoke_tests.py  document_rendering.py  files.py  google_secrets.py  iter.py  meta.py  name_normalizers.py  openai.py  polars.py  protocol_util.py  registry_spec.py  semver.py  telemetry.py  temp_files.py  text_util.py  uv_util.py
airbyte/_writers/: __init__.py  base.py  file_writers.py  jsonl.py
airbyte/caches/: __init__.py  _catalog_backend.py  _catalog_manager.py  _state_backend.py  _state_backend_base.py  _state_manager.py  base.py  bigquery.py  colab.py  duckdb.py  ducklake.py  generic.py  iceberg.py  motherduck.py  postgres.py  snowflake.py  util.py
airbyte/cli/: __init__.py  __main__.py  _base.py  _cli.py  _cli_auth.py  _input.py  _output.py  cloud_cli.py  connections.py  destinations.py  jobs.py  pyab.py  sources.py  workspaces.py
airbyte/cloud/: __init__.py  _api_util.py  _case_conversion.py  _connection_catalog.py  _connection_state.py  _connections.py  _credentials.py  _destination_util.py  _destinations.py  _resources.py  _sync_progress.py  _sync_results.py  _workspaces.py  auth.py  client.py  client_config.py  connections.py  connectors.py  constants.py  credentials.py  experimental.py  models.py  organizations.py  sync_results.py  workspaces.py
airbyte/datasets/: __init__.py  _base.py  _inmemory.py  _lazy.py  _map.py  _sql.py
airbyte/destinations/: __init__.py  _translate_cache_to_dest.py  _translate_dest_to_cache.py  _util.py  base.py  util.py
airbyte/executors/: base.py  declarative.py  docker.py  emulated.py  local.py  python.py  util.py
airbyte/experimental/: __init__.py
airbyte/http_caching/: README.md  __init__.py  cache.py  mitm_addons_script.py  mitm_proxy.py  modes.py  proxy.py  serialization.py
conda.recipe/: meta.yaml
deploy/: Caddyfile  docker-compose.mcp.yml
docs/: CONTRIBUTING.md  MCP_HTTP_DEPLOYMENT.md  cli-conventions-proposal.md  conda.md  custom_connectors.md  faq.md  generate.py  generate_cli.py  generate_cli_docs.py  timeout_configuration.md
examples/: manual_connector_test.py  pyproject.toml  rick_morty_manifest.yaml  run_bigquery_destination.py  run_bigquery_faker.py  run_cloud_sync_with_rich_progress.py  run_declarative_manifest_source.py  run_downloadable_yaml_source.py  run_downloaded_yaml_source.py  run_faker.py  run_faker_samples.py  run_faker_to_ducklake.py  run_faker_to_motherduck.py  run_fast_lake_copy.py  run_file_source.py  run_get_documents_from_github.py  run_github.py  run_github_samples.py  run_gsm_connector_secret_fetch.py  run_iceberg_cache.py  run_integ_test_source.py  run_java_connector_tests.py  run_langchain_github_test.py  run_mcp_server.py  run_perf_test_cache_snowflake.py  run_perf_test_reads.py  run_perf_test_reads_2.py  run_pokeapi.py  run_pokeapi_cached.py  run_pokeapi_cached_fixed.py  run_polars_poc.py  run_pydantic_ai_pokemon.py  run_salesforce_to_bigquery_cache.py  run_salesforce_to_bigquery_destination.py  run_snowflake_cortex_test_data.py  run_snowflake_cortex_with_github.py  run_snowflake_destination.py  run_snowflake_faker.py  run_source_snowflake_java.py  run_spacex.py  (+9 more)
poe-tasks/: wrkflw-poe-tasks.toml
scripts/: __init__.py  analyze_slow_tests.py  build_slim_package.uv  generate_mcp_docs.py  generate_mcp_markdown.py  reproduce_issue_290.py  run_workflow.py
tests/: conftest.py  pyproject.toml  test_report_demo.py
(+225 files in other folders)
