[tool.poetry]
name = "airbyte"
description = "PyAirbyte"
authors = ["Airbyte <contact@airbyte.io>"]
readme = "README.md"
packages = [{ include = "airbyte" }]

# This project uses dynamic versioning
# https://github.com/mtkennerly/poetry-dynamic-versioning
version = "0.0.0"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

airbyte-api = "^0.52.1"
airbyte-cdk = "^6.56.5"
airbyte-protocol-models-pdv2 = "^0.13.0"
click = "^8.1.7"
duckdb = "^1.1.0"
duckdb-engine = "^0.13.2"
google-auth = ">=2.27.0,<3.0"
google-cloud-bigquery = ">=3.12.0,<4.0"
google-cloud-bigquery-storage = "^2.25.0"
google-cloud-secret-manager = "^2.17.0"
jsonschema = ">=3.2.0,<5.0"
orjson = "^3.10"
overrides = "^7.4.0"
pandas = { version = ">=1.5.3,<3.0" }
psycopg = {extras = ["binary", "pool"], version = "^3.1.19"}
psycopg2-binary =  "^2.9.9"
pyarrow = ">=16.1,<18.0"
pydantic = ">=2.0,<=3.0"
pydantic-core = "*"
python-dotenv = "^1.0.1"
python-ulid = "^3.0.0"
pytz = "*"
pyyaml = "^6.0.2"
requests = "!=3.32.0"  # 3.32.0 breaks docker tests
rich = "^13.7.0"
snowflake-connector-python = "^3.12.2"
snowflake-sqlalchemy = "^1.6.1"
structlog = "^24.4.0"
# TODO: Remove SQLAlchemy version constraint once DuckDB engine bug is fixed (issue #423)
sqlalchemy = ">=1.4.51,!=2.0.36,<3.0"

# TODO: Remove this arbitrary python constraint once `sqlalchemy-bigquery` has done so.
sqlalchemy-bigquery = { version = "1.12.0", python = "<3.13" }
typing-extensions = "*"
uuid7 = "^0.1.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.5.1"
deptry = "^0.21.1"
docker = "^7.1.0"
faker = "^21.0.0"
freezegun = "^1.4.0"
mypy = "^1.11.2"
pandas-stubs = "^2.1.4.231218"
pdoc = "^14.3.0"
poethepoet = ">=0.26.1,<0.32.0"
pytest = "^8.2.0"
pytest-docker = "^3.1.1"
pytest-mock = "^3.14.0"
pytest-mypy = "^0.10.3"
pytest-timeout = "^2.3.1"
responses = "^0.25.0"
ruff = "^0.8.2"
sqlalchemy2-stubs = "^0.0.2a38"
tomli = "^2.0"
types-jsonschema = "^4.20.0.0"
types-pyyaml = "^6.0.12.12"
types-requests = "2.31.0.4"
viztracer = ">=0.16.3,<1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0,<2.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
# Pytest configuration as follows:
# - No test can take longer than 10 minutes (600 seconds)
# - Markers must be declared explicitly
# - Generate junit test results at a deterministic location
addopts = "-rs --strict-markers --timeout=600 --junit-xml=build/test-results/test-results.xml"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "super_slow: these super slow tests will not run in CI; they will only ever run on-demand",
    "requires_creds: marks a test as requiring credentials (skip when secrets unavailable)",
    "linting: marks a test as a linting test",
    "flaky: marks a test as flaky",
]
filterwarnings = [ # syntax: "action:message_regex:category:module:line"
    # Treat python warnings as errors in pytest
    # "error",  # TODO: Revert. Currently disabled because `airbyte_cdk.sources.source.ExperimentalClassWarning` ignore is not working
    # # Snowflake reregisters its functions, which is fine.
    "ignore::sqlalchemy.exc.SAWarning",  # "GenericFunction is already registered and is going to be overridden.""
    # Ignore these, specifically on Windows because of file cleanup and locking issues:
    "ignore:unclosed file:ResourceWarning",
    "ignore:Failed to decode:UserWarning",  # https://github.com/airbytehq/pyairbyte/issues/320
    "ignore::pytest.PytestUnraisableExceptionWarning",
    # Order matters here. This must be last because it will fail if we
    # hit another warning during the import.
    "ignore::airbyte_cdk.sources.source.ExperimentalClassWarning",
    "ignore::airbyte.exceptions.AirbyteExperimentalFeatureWarning",
    # CDK has these refs:
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]


# [tool.ruff]
# Ruff moved to dedicated config file: `.ruff.toml`

[tool.mypy]
# Platform configuration
python_version = "3.10"
# imports related
ignore_missing_imports = true
follow_imports = "silent"
# None and Optional handling
no_implicit_optional = true
strict_optional = true
# Configuring warnings
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
warn_return_any = false
# Untyped definitions and calls
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
# Disallow dynamic typing
disallow_subclassing_any = true
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
# Miscellaneous strictness flags
allow_untyped_globals = false
allow_redefinition = false
local_partial_types = false
implicit_reexport = true
strict_equality = true
# Configuring error messages
show_error_context = false
show_column_numbers = false
show_error_codes = true
exclude = [
    "tests/integration_tests/fixtures/source-broken",
    "tests/integration_tests/fixtures/source-test",
    "docs",
    "tests",
]

[[tool.mypy.overrides]]
ignore_missing_imports = true  # No stubs yet (😢)
module = [
    "airbyte_protocol",
    "airbyte_protocol.models",
]

[tool.pyright]
pythonVersion = "3.10"
venvPath = "./"       # Assuming .venv is at the root of your project
venv = ".venv"

[tool.poetry.scripts]
pyairbyte = "airbyte.cli:cli"
pyab = "airbyte.cli:cli"

[tool.poe.tasks]
test = { shell = "pytest" }
test-fast = { shell = "pytest --durations=5 --exitfirst -m 'not slow'" }

coverage = { shell = "coverage run -m pytest && coverage report" }
coverage-report = { shell = "coverage report" }
coverage-html = { shell = "coverage html -d htmlcov && open htmlcov/index.html" }
coverage-reset = { shell = "coverage erase" }

check = { shell = "ruff check . && mypy . && pytest --collect-only -qq" }

docs-generate = {env = {PDOC_ALLOW_EXEC = "1"}, cmd = "python -m docs.generate run"}
docs-preview = {shell = "poe docs-generate && open docs/generated/index.html"}

fix = { shell = "ruff format . && ruff check --fix -s || ruff format ." }
fix-unsafe = { shell = "ruff format . && ruff check --fix --unsafe-fixes . && ruff format ." }
fix-and-check = { shell = "poe fix && poe check" }

[tool.airbyte_ci]
extra_poetry_groups = ["dev"]
poe_tasks = ["test"]
required_environment_variables = ["GCP_GSM_CREDENTIALS"]
side_car_docker_engine = true

[tool.deptry.per_rule_ignores]
# This is a mapping of rules and package names to be ignored for that rule.
DEP001 = [
  "IPython"  # Optional dependency, used for detecting Notebook environments
]
DEP004 = [
  "pdoc"  # Only used for generating documentation. Not a runtime dependency.
]
DEP002 = [
  # Only used for SQLAlchemy engine. Not imported directly:
  "duckdb",
  "psycopg",
  "psycopg2-binary",
  "sqlalchemy-bigquery",
]
